fix: main navigation vertical overflow (#284)
* style: link color updates

Some to meet AA!

* fix: footer credit links in light mode

* fix: nav item active state

* fix: vertical overflow on main nav

* style: couple of post footer tag nav tweaks

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,21 +1,29 @@
 .nav {
+	// Outputs: .nav__list
     &__list {
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-        -ms-overflow-style: none;
+		// Outputs: .nav__list--tags
+		&--tags {
+			overflow-x: auto;
+			-webkit-overflow-scrolling: touch;
+			-ms-overflow-style: none;
 
-        &::-webkit-scrollbar {
-            display: none;
-        }
+			&::-webkit-scrollbar {
+				display: none;
+			}
+
+			.nav__item {
+				flex-shrink: 0;
+			}
+		}
 
         > * + * {
             margin-left: get-size(500);
         }
-    }
+	}
 
+	// Outputs: .nav__item
     &__item {
         padding: 0;
-        flex-shrink: 0;
 
         &.active {
             a {
@@ -33,6 +41,7 @@
             }
         }
 
+		// Outputs: .nav__item--tag
         &--tag {
             a {
                 &:after {
@@ -66,11 +75,13 @@
 
 @include media-query('md') {
     .nav {
+		// Outputs: .nav__list
         &__list {
             > * + * {
                 margin-left: get-size(700);
-            }
+			}
 
+			// Outputs: .nav__list--tags
             &--tags {
                 > * + * {
                     margin-left: get-size(500);
